@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 12
skinparam defaultFontName Arial
skinparam ArrowColor #344054
skinparam rectangle {
  BorderColor #344054
  FontColor #101828
}
skinparam package {
  BorderColor #667085
  FontColor #101828
  BackgroundColor #F9FAFB
}

skinparam class {
  BorderColor #344054
  FontColor #101828
  BackgroundColor #F9FAFB
}
title Class structure - Save a photograph and its brief
class Photograph {
  +Id: Guid
  +OwnerId: string
  +Title: string
  +ImageRevision: long
  +Image: ImageAsset
  +Brief: CritiqueBrief
  +Version: long
  +ChangeBrief(brief: CritiqueBrief): void
  +AttachImage(image: ImageAsset): void
}
interface ILibraryStore {
  +ReadOwned(ownerId: string, id: Guid): Task<OwnedState>
  +Commit(expectedVersion: long): Task<CommitResult>
}
class UploadPhotographCommand {
  +OwnerId: string
  +Payload: UploadPhotographInput
}
class UploadPhotographCommandHandler {
  +Handle(request: UploadPhotographCommand, cancellation: CancellationToken): Task<Result>
}
UploadPhotographCommandHandler ..> UploadPhotographCommand : handles
UploadPhotographCommandHandler --> Photograph : reads / applies
UploadPhotographCommandHandler ..> ILibraryStore : persists / queries
class UpdatePhotographBriefCommand {
  +OwnerId: string
  +Payload: UpdatePhotographBriefInput
}
class UpdatePhotographBriefCommandHandler {
  +Handle(request: UpdatePhotographBriefCommand, cancellation: CancellationToken): Task<Result>
}
UpdatePhotographBriefCommandHandler ..> UpdatePhotographBriefCommand : handles
UpdatePhotographBriefCommandHandler --> Photograph : reads / applies
UpdatePhotographBriefCommandHandler ..> ILibraryStore : persists / queries
interface IImageIngestor {
  +Stage(input: ImageUpload, ct: CancellationToken): Task<StagedImage>
}
UploadPhotographCommandHandler ..> IImageIngestor : uses
interface IImageStore {
  +OpenOwned(key: string, ct: CancellationToken): Task<Stream>
  +DeleteUnreferenced(key: string): Task
}
UploadPhotographCommandHandler ..> IImageStore : uses
interface IPhotographService {
  +upload(input: PhotographUpload, onProgress?: callback, signal?: AbortSignal): Promise<PhotographResult>
  +list(cursor?: string): Promise<PhotographPage>
}
class PhotographService {
  -http: HttpClient
}
PhotographService ..|> IPhotographService
class PhotographUpload {
  -service: IPhotographService
  +saving: Signal<boolean>
  +dirty: Signal<boolean>
  +save(): Promise<void>
  +cancelUpload(): void
}
PhotographUpload ..> IPhotographService : inject token
class MyWork {
  +uploading: Signal<boolean>
  +canLeave(): boolean | Promise<boolean>
}
class PhotographUploadDialog {
  +canLeave(): boolean | Promise<boolean>
  +cancel(): Promise<void>
}
class PhotographCollection {
  +refresh(): Promise<void>
}
MyWork *-- PhotographUploadDialog : owns modal lifetime
MyWork *-- PhotographCollection : preserves underlying collection
PhotographUploadDialog *-- PhotographUpload : owns draft
PhotographUploadDialog ..> UnsavedChanges : confirms discard
PhotographUploadDialog ..> RequestCritique : admission after persistence
class CritiqueBrief {
 +Intent: string?
 +Genre: string?
 +Experience: ExperienceLevel?
 +RequestedFeedback: string?
}
Photograph "1" *-- "1" CritiqueBrief : current brief
@enduml
